# safl

./: CMakeLists.txt  LICENSE  README.md
cmake/: ProjectConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  SaflDoxygen.css
doc/pages/: 0_MainPage.dox  1_FuturesAndPromises.dox  MainPage.dox  Specification.dox
doc/style/: CustomDoxygen.css  DoxygenLayout.xml  Header.html
include/safl/: Future.h  ToFuture.h
include/safl/detail/: Context.h  ErrorHandling.h  FunctionTraits.h  FutureDetail.h  Utils.h
lib/: CMakeLists.txt
lib/ext/: CMakeLists.txt
lib/ext/capi/: CMakeLists.txt
lib/ext/capi/include/safl/capi/: ToFuture.h
lib/ext/qt/: CMakeLists.txt
lib/ext/qt/include/safl/qt/: Executor.h
lib/ext/qt/src/safl/qt/: Executor.cpp
lib/include/safl/: Composition.h  Executor.h  Future.h  ToFuture.h
lib/include/safl/detail/: Context.h  DebugContext.h  ErrorHandling.h  Executor.h  FunctionTraits.h  FutureDetail.h  NonCopyable.h  Signalling.h  UniqueInstance.h  Utils.h
lib/src/safl/: Executor.cpp  Future.cpp
lib/src/safl/detail/: Context.cpp  DebugContext.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/safl/: Composition.h
libs/core/include/safl/detail/: Context.h  DebugContext.h  FunctionTraits.h  FutureDetail.h  Signalling.h  TypeEraser.h
libs/core/src/safl/detail/: Context.cpp
libs/core/test/: CoreTests.cpp  TraitsTests.cpp
libs/extensions/: CMakeLists.txt
libs/extensions/qt/: CMakeLists.txt
libs/extensions/qt/include/safl/qt/: Futurize.h
libs/extensions/qt/test/: QtTests.cpp
libs/safl/: CMakeLists.txt
libs/safl-qt/: CMakeLists.txt
libs/safl-qt/include/safl/qt/: Executor.h
libs/safl-qt/src/safl/qt/: Executor.cpp
libs/safl/include/safl/: Future.h
libs/testing/: CMakeLists.txt
libs/testing/include/safl/testing/: Testing.h
libs/testing/src/safl/testing/: Testing.cpp
src/safl/: Future.cpp
test/: CMakeLists.txt  Tests.cpp  main.cpp
test/include/safl/: Testing.h
test/src/: CapiTests.cpp  MyObject.h  QtTests.cpp  SaflTests.cpp  Testing.h  Tests.cpp  TraitsTests.cpp
test/src/safl/: Testing.cpp
